--- a/Style.css
+++ b/Style.css
@@ -461,7 +461,14 @@ body.dark-mode footer
     transition: color 0.4s ease;
 }
 /* Mobile: 768px and below */
-@media (max-width: 1000px) {
+@media (max-width: 1000px) 
+{
+    header
+    {
+        posistion: static;
+        width: 100%;
+        z-index: auto;
+    }
 
     header .header-content 
     {
@@ -474,7 +481,7 @@ body.dark-mode footer
     header h1 
     {
         position: static;
-        font-size: 1.6rem;
+        font-size: 1rem;
         text-align: center;
         margin-bottom: 0.5rem;
     }
@@ -483,7 +490,7 @@ body.dark-mode footer
     {
         align-items: center;
         flex-wrap: wrap;
-        gap: 0.2rem;
+        gap: 0.1rem;
     }
 
     header nav a 
@@ -506,6 +513,7 @@ body.dark-mode footer
     {
         padding: 2rem 1rem;
         height: auto;
+        padding-top:0;
     }
 
     .hero h1 
