--- a/Style.css
+++ b/Style.css
@@ -465,7 +465,7 @@ body.dark-mode footer
 {
     header
     {
-        posistion: static;
+        position: static;
         width: 100%;
         z-index: auto;
     }
