--- a/Style.css
+++ b/Style.css
@@ -9,7 +9,7 @@
 
 body
 {
-    background-image: url('bg-flowers-light.jpeg');
+    background-image: url('Resources/bg-flowers-light.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@ body.dark-mode
     #c36b7b 10%,
     #3c3338 40%,
     #2f2a2d 100%); */
-    background-image: url('bg-darkmode.jpeg');
+    background-image: url('Resources/bg-darkmode.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -216,6 +216,7 @@ body.dark-mode .avatar-placeholder img
     align-items: center;
     text-align: center;
     font-family: 'Ovo', serif;
+    margin:auto;
 }
 
 .about-card 
@@ -284,7 +285,7 @@ body.dark-mode .avatar-placeholder img
 .skills h2, .projects h2, .contact h2
 {
   font-size: 2.5rem;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -299,7 +300,7 @@ body.dark-mode .avatar-placeholder img
     margin-bottom: 2rem;
 }
 
-.skill-tags 
+.skill-tags
 {
   display: flex;
   flex-wrap: wrap;
@@ -310,7 +311,7 @@ body.dark-mode .avatar-placeholder img
 }
 
 
-.skill-tag 
+.skill-tag
 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: var(--dark-pink);
@@ -344,46 +345,122 @@ body.dark-mode .skills-intro
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem 1.5rem;
-  max-width: 80rem;
+  gap: 1.5rem;
   margin: 0 auto;
+  color: white;
 }
 
 .project-card 
 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.2rem;
-  color: white;
+  font-size: 1.1rem;
   background: var(--dark-pink);
   backdrop-filter: blur(12px);
   border-radius: 20px;
-  padding: 2rem;
+  padding: 0.5rem;
   flex: 1 1 16rem;
+  max-width: 30rem;
   box-shadow: 0 2px 10px rgb(206, 181, 200);
   transition: transform 0.3s ease, background 0.4s ease, box-shadow 0.4s ease;
 }
 
-/* contact section */
-.contact-card
+.project-links, .tools-tags, .picture
 {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2rem;
-    text-align: center;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.2rem;
-    color: var(--dark-walnut);
-    border-radius: 15px;
-    padding: 0.5rem;
-    max-width: 25rem;
-    box-shadow: 0 2px 10px rgb(206, 181, 200);
-    transition: transform 0.3s ease, background 0.4s ease, box-shadow 0.4s ease;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-body.dark-mode .contact-card
+.proj-link
 {
-    color: var(--light-pink);
-    transition: color 0.4s ease;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--dark-walnut);
+  font-weight: 600;
+  font-size: 1.1rem;
+  padding: 0.6rem;
+  transition: background-color 0.4s, color 0.4s, box-shadow 0.4s, transform 0.4s;
+  text-decoration:underline;
+}
+
+.proj-link:hover
+{
+    color: white;
+}
+
+.project-card h4
+{
+    margin-bottom: 0.5rem;
+}
+
+.tool-tag
+{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background: var(--pink); 
+  color: var(--dark-walnut);
+  font-weight: 600;
+  padding: 0.3rem 1rem;
+  margin: 0.5rem;
+  margin-top: 0;
+  border-radius: 40px;
+  transition: background-color 0.4s, color 0.4s, box-shadow 0.4s, transform 0.4s;
+}
+
+.project-card:hover .tool-tag
+{
+    background: var(--dark-pink);
+    color: white;
+} 
+
+.picture img, .logo img
+{
+    width: 7rem;
+    padding: 0.3rem 0.7rem;
+    border-radius: 1rem;
+    transition: box-shadow 0.4s, transform 0.4s;
+    cursor: pointer;
+}
+
+.logo img
+{
+    cursor:default;
+}
+
+.modal 
+{
+  display: none;                
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.7);  
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-img 
+{
+  max-width: 90vw;   /* never wider than 90% of screen */
+  max-height: 90vh;  /* never taller than 90% of screen */
+  width: auto !important;
+  height: auto !important;
+  object-fit: contain;
+  border-radius: 0.5rem;
+}
+
+.close 
+{
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  font-size: 2rem;
+  color: #fff;
+  cursor: pointer;
+}
+
+/* contact section */
+
+.contact
+{
+    margin-top: 0;
 }
 
 body.dark-mode .contact h2
@@ -392,7 +469,7 @@ body.dark-mode .contact h2
     transition: color 0.4s ease;
 }
 
-.contact-form
+form
 {
   display: flex;
   flex-wrap: wrap;
@@ -438,7 +515,7 @@ textarea
     font-size: 1.1rem;
     padding: 0.6rem 1.6rem;
     border-radius: 50px;
-    box-shadow: 0 2px 10px rgb(206, 181, 200);
+    box-shadow: 0 2px 5px rgb(206, 181, 200);
     border: none;
     cursor: pointer;
     transition: background-color 0.4s, color 0.4s, box-shadow 0.4s, transform 0.4s;
@@ -446,14 +523,17 @@ textarea
 
 footer
 {
+    display: flex;
+    justify-content: space-evenly;
     text-align: center;
-    padding: 1rem;
+    padding: 0.5rem;
     background: rgba(245, 177, 203, 0.582);
     backdrop-filter: blur(10px) saturate(180%);
     box-shadow: 0 -2px 16px rgba(0,0,0,0.1); 
     color: var(--dark-walnut);
     font-family: 'Ovo', serif;
     user-select: none;
+    max-height: 3rem;
 }
 
 body.dark-mode footer
@@ -469,6 +549,15 @@ body.dark-mode footer
         position: static;
         width: 100%;
         z-index: 10;
+    }
+
+    header, footer 
+    {
+        width: 100%;
+        max-width: none;
+        margin: 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     header .header-content 
@@ -539,8 +628,9 @@ body.dark-mode footer
     {
         flex-direction: column;
         text-align: center;
-        max-width: 95vw;
+        max-width: 85vw;
         padding: 1.5rem;
+        margin:auto;
     }
 
     .about-photo 
@@ -573,6 +663,38 @@ body.dark-mode footer
         font-size: 1.2rem;
         padding: 0 1rem;
     }
+
+
+    form
+    {
+        flex-direction: column;
+        align-items: stretch;
+        max-width: 100%;
+        padding: 0 1rem;
+    }
+
+    input
+    {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
+
+    textarea
+    {
+        max-width: 100%;
+        min-width: 0;
+    }
+
+    .submit
+    {
+        align-self: center;
+        width: auto;
+    }
+
+    footer
+    {
+        font-size: 0.8rem;
+    }
 }
 
 /* MOBILE PHONES: 480px and below */
@@ -580,7 +702,7 @@ body.dark-mode footer
 
     header h1 
     {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 
     header nav a 
@@ -588,6 +710,15 @@ body.dark-mode footer
         font-size: 0.9rem;
     }
 
+    .about-card 
+    {
+        flex-direction: column;
+        text-align: center;
+        max-width: 85vw;
+        padding: 1.5rem;
+        margin:auto;
+    }
+    
     .proj-button 
     {
         font-size: 1rem;
@@ -598,4 +729,15 @@ body.dark-mode footer
     {
         font-size: 1.7rem;
     }
+
+    footer
+    {
+        font-size: 0.6rem;
+    }
+    
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
